[project]
name = "pyenvalid"
version = "0.1.0"
description = "Beautiful validation errors for pydantic-settings"
readme = "README.md"
license = "MIT"
authors = [
    { name = "truehazker", email = "40111175+truehazker@users.noreply.github.com" }
]
requires-python = ">=3.11"
keywords = ["pydantic", "pydantic-settings", "validation", "environment", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Repository = "https://github.com/truehazker/pyenvalid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/pyenvalid"]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pyenvalid"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
pythonPlatform = "All"
